--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+  <h1>Desafio 1 - Experience Soluções</h1>
+  <h2>O programa conta de 1 a 100, jogando “FizzBuzz”</h2>
   <div id="app"></div>
 </body>
 
