Feature: Estilo definido.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
 </head>
 
 <body>
-  <h1>Desafio 1 - Experience Soluções</h1>
-  <h2>O programa conta de 1 a 100, jogando “FizzBuzz”</h2>
+  <header>
+    <h1>Desafio 1 - Experience Soluções</h1>
+    <h2>O programa conta de 1 a 100, jogando “FizzBuzz”</h2>
+  </header>
   <div id="app"></div>
+  <footer>
+    <h2>
+      CODIGO: <a target="_blank" href="https://github.com/Marilzon/FizzBuzz">github.com/Marilzon/FizzBuzz</a>
+    </h2>
+  </footer>
 </body>
 
 </html>
