Update: pequenas estilizações

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div id="app"></div>
   <footer>
     <h2>
-      CODIGO: <a target="_blank" href="https://github.com/Marilzon/FizzBuzz">github.com/Marilzon/FizzBuzz</a>
+      CÓDIGO: <a target="_blank" href="https://github.com/Marilzon/FizzBuzz">github.com/Marilzon/FizzBuzz</a>
     </h2>
   </footer>
 </body>
