Feature: ativando Github-pages

--- a/index.html
+++ b/index.html
@@ -14,12 +14,17 @@
 <body>
   <header>
     <h1>Desafio 1 - Experience Soluções</h1>
-    <h2>O programa conta de 1 a 100, jogando “FizzBuzz”</h2>
+    <h2>O programa gera uma contagem de 1 a 100,
+      exibindo os elementos que são “FizzBuzz”
+    </h2>
   </header>
   <div id="app"></div>
   <footer>
     <h2>
-      CÓDIGO: <a target="_blank" href="https://github.com/Marilzon/FizzBuzz">github.com/Marilzon/FizzBuzz</a>
+      CÓDIGO:
+      <a target="_blank" href="https://github.com/Marilzon/FizzBuzz">
+        github.com/Marilzon/FizzBuzz
+      </a>
     </h2>
   </footer>
 </body>
