--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
 
 <body>
   <header>
-    <h1>Desafio 1 - Experience Soluções</h1>
-    <h2>O programa gera uma contagem de 1 a 100,
+    <h1>o Código gera uma contagem de 1 a 100,
       exibindo os elementos que são “FizzBuzz”
-    </h2>
+    </h1>
   </header>
   <div id="app"></div>
   <footer>
