--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
 
 <body>
   <header>
-    <h1>o Código gera uma contagem de 1 a 100,
-      exibindo os elementos que são “FizzBuzz”
-    </h1>
+    <h1>FizzBuzz</h1>
+    <p>
+      "O codigo imprime números de 1 a 100. Mas para múltiplos de três imprime
+      'Fizz' em vez do número e para os múltiplos de cinco imprime 'Buzz'. Para números que são múltiplos
+      de três e cinco imprime 'FizzBuzz
+    </p>
   </header>
   <div id="app"></div>
   <footer>
