--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p>
       "O codigo imprime números de 1 a 100. Mas para múltiplos de três imprime
       'Fizz' em vez do número e para os múltiplos de cinco imprime 'Buzz'. Para números que são múltiplos
-      de três e cinco imprime 'FizzBuzz'. ""
+      de três e cinco imprime 'FizzBuzz'. "
     </p>
   </header>
   <div id="app"></div>
